--- a/packages/robo-advisor-frontend/src/index.css
+++ b/packages/robo-advisor-frontend/src/index.css
@@ -1,4 +1,28 @@
 /* ./src/index.css */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+.path:hover {
+  animation: bounce 0.5s ease 2;
+  cursor: pointer;
+}
+g.path.active path:first-child {
+  fill: #9bb89b;
+}
